pluma_parser/tests/snapshots/parse_success__regex_min_count.snap
---
source: pluma_parser/tests/parse_success.rs
expression: "/\"aa\" \"b\"{2, } \"cc\"/"
---

=== Source ===
/"aa" "b"{2, } "cc"/

=== Comments ===
{}

=== AST ===
Module(0, 20) [
    TopLevelStatementNode {
        pos: (
            0,
            20,
        ),
        kind: Expr(
            ExprNode {
                pos: (
                    0,
                    20,
                ),
                kind: RegExpr {
                    regex: RegExprNode {
                        pos: (
                            0,
                            0,
                        ),
                        kind: Sequence(
                            [
                                RegExprNode {
                                    pos: (
                                        2,
                                        4,
                                    ),
                                    kind: Literal(
                                        "aa",
                                    ),
                                },
                                RegExprNode {
                                    pos: (
                                        7,
                                        14,
                                    ),
                                    kind: AtLeastCount(
                                        RegExprNode {
                                            pos: (
                                                7,
                                                8,
                                            ),
                                            kind: Literal(
                                                "b",
                                            ),
                                        },
                                        2,
                                    ),
                                },
                                RegExprNode {
                                    pos: (
                                        16,
                                        18,
                                    ),
                                    kind: Literal(
                                        "cc",
                                    ),
                                },
                            ],
                        ),
                    },
                },
                typ: Unknown,
            },
        ),
    },
]

