pluma_parser/tests/snapshots/parse_success__regex_simple.snap
---
source: pluma_parser/tests/parse_success.rs
expression: /space/
---

=== Source ===
/space/

=== Comments ===
{}

=== AST ===
ModuleNode {
    pos: (
        0,
        7,
    ),
    body: [
        TopLevelStatementNode {
            pos: (
                0,
                7,
            ),
            kind: Expr(
                ExprNode {
                    pos: (
                        0,
                        7,
                    ),
                    kind: RegExpr(
                        RegExprNode {
                            pos: (
                                1,
                                6,
                            ),
                            kind: CharacterClass(
                                "space",
                            ),
                        },
                    ),
                    typ: Unknown,
                },
            ),
        },
    ],
}

