pluma_parser/tests/snapshots/parse_success__regex_star.snap
---
source: pluma_parser/tests/parse_success.rs
expression: "/\"w\" \"o\"* \"w\"/"
---

=== Source ===
/"w" "o"* "w"/

=== Comments ===
{}

=== AST ===
Module(0, 14) [
    TopLevelStatement(0, 14) Expr(
        ExprNode {
            pos: (
                0,
                14,
            ),
            kind: RegExpr {
                regex: RegExprNode {
                    pos: (
                        0,
                        0,
                    ),
                    kind: Sequence(
                        [
                            RegExprNode {
                                pos: (
                                    2,
                                    3,
                                ),
                                kind: Literal(
                                    "w",
                                ),
                            },
                            RegExprNode {
                                pos: (
                                    6,
                                    9,
                                ),
                                kind: ZeroOrMore(
                                    RegExprNode {
                                        pos: (
                                            6,
                                            7,
                                        ),
                                        kind: Literal(
                                            "o",
                                        ),
                                    },
                                ),
                            },
                            RegExprNode {
                                pos: (
                                    11,
                                    12,
                                ),
                                kind: Literal(
                                    "w",
                                ),
                            },
                        ],
                    ),
                },
            },
            typ: Unknown,
        },
    ),
]

