pluma_parser/tests/snapshots/parse_success__string_close_parens.snap
---
source: pluma_parser/tests/parse_success.rs
expression: "\"I AM HERE :---)\""
---

=== Source ===
"I AM HERE :---)"

=== Comments ===
{}

=== AST ===
Module(1, 16) [
    TopLevelStatementNode {
        pos: (
            1,
            16,
        ),
        kind: Expr(
            ExprNode {
                pos: (
                    1,
                    16,
                ),
                kind: Literal {
                    literal: LiteralNode {
                        pos: (
                            1,
                            16,
                        ),
                        kind: Str(
                            "I AM HERE :---)",
                        ),
                    },
                },
                typ: Unknown,
            },
        ),
    },
]

