pluma_parser/tests/snapshots/parse_success__string_emoji.snap
---
source: pluma_parser/tests/parse_success.rs
expression: "\"frog 🐸\""
---

=== Source ===
"frog 🐸"

=== Comments ===
{}

=== AST ===
Module(1, 10) [
    TopLevelStatement(1, 10) Expr(
        ExprNode {
            pos: (
                1,
                10,
            ),
            kind: Literal {
                literal: Literal(1, 10) Str("frog 🐸"),
            },
            typ: Unknown,
        },
    ),
]

