pluma_parser/tests/snapshots/parse_success__string_emoji_2.snap
---
source: pluma_parser/tests/parse_success.rs
expression: "\"🌝\""
---

=== Source ===
"🌝"

=== Comments ===
{}

=== AST ===
Module(1, 5) [
    TopLevelStatementNode {
        pos: (
            1,
            5,
        ),
        kind: Expr(
            ExprNode {
                pos: (
                    1,
                    5,
                ),
                kind: Literal {
                    literal: LiteralNode {
                        pos: (
                            1,
                            5,
                        ),
                        kind: Str(
                            "🌝",
                        ),
                    },
                },
                typ: Unknown,
            },
        ),
    },
]

