pluma_parser/tests/snapshots/parse_success__string_emoji_3.snap
---
source: pluma_parser/tests/parse_success.rs
expression: "\"🏳️‍🌈\""
---

=== Source ===
"🏳️‍🌈"

=== Comments ===
{}

=== AST ===
Module(1, 15) [
    TopLevelStatement(1, 15) Expr(
        ExprNode {
            pos: (
                1,
                15,
            ),
            kind: Literal {
                literal: Literal(1, 15) Str("🏳\u{fe0f}\u{200d}🌈"),
            },
            typ: Unknown,
        },
    ),
]

